@@ -1,2 +1,2 @@
-usr/sbin/*
+usr/bin/*
 usr/share/man/man8/*
