@@ -1,12 +1,12 @@
 This directory contains scripts and associated files to show how
 SAS-2 zoning might be set up and disabled using the utilities
-in the main directory.
+from this package.
 
 Scripts:
-    zoning_ex.sh:           configure zoning
-    dis_zoning_ex.sh:       disable zoning
-    t10annex_zoning_ex.sh   configure zoning with permissions as seen
-                            in the SAS-2 Annex example (see below)
+    zoning_ex.sh            - configure zoning
+    dis_zoning_ex.sh        - disable zoning
+    t10annex_zoning_ex.sh   - configure zoning with permissions as seen
+                              in the SAS-2 Annex example (see below)
 
 
 The zoning_ex.sh script will override any zoning configuration in
@@ -17,14 +17,14 @@ the expander will restore the previous settings **.
 
 The zoning_ex.sh script is relatively generic with the tailoring to
 a set of zone permissions and mapping of expander phys to zone groups
-being done either by two files in this directory:
+being done by these two files in this directory:
     permf_8i9t.txt  ***
     pconf_2i2t.txt
 or, alternatively the permission file and the phy info file can be given
 on the script command line (following the expander device node name).
 Note that if pconf_2i2t.txt is used then phy ids will most likely need
-to be changed to match which cable is connected to which expander
-phy. [Suggestion: examine the output of smp_discover closely to determine
+to be changed depending on what the expanders phys are connected to.
+[Suggestion: examine the output of smp_discover closely to determine
 which expander phys are connected to what.]
 
 The zone permission table can be read back from the expander with the
@@ -65,10 +65,11 @@ PERMISSION TABLE request as shown in the annex example. There is an
 associated zone phy control file pconf_all10.txt which puts the first 24
 expander phys in zone group 10. If the t10annex_zoning_ex.sh script is
 successful then the smp_rep_zone_perm_tbl utility can be used to read the
-expander zone permission table. A comparison can then be made between what
-was read back and the final state of the zone permission table shown in
-the annex. To simplify comparing the read back zone permission table
-and the SAS-2 annex example, the '--bits=12' option may help.
+expander zone permission table. The t10annex_zoning_ex.sh script prints
+out a copy of the annex table (Table H.4 in my copy) showing the final state
+of the zone permission table. A comparison can then be made between this
+and what is read back with 'smp_rep_zone_perm_tbl --bits=13 <smp_device>'
+command.
 
 
 **  Just in case the zone permission table or the zone phy information
@@ -83,4 +84,4 @@ and the SAS-2 annex example, the '--bits=12' option may help.
 
 
 Doug Gilbert
-20th June 2011
+27th January 2012
