@@ -2,10 +2,13 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.98 [20120124] [svn:r117]
+Changelog for smp_utils-0.98 [20120127] [svn:r118]
   - smp_discover, smp_discover_list: in 1 line summary use
     "U" instead of "T" (routing attribute) if "table to
     table supported" set in report general response
+  - change binary install from /usr/sbin to /usr/bin since
+    sbin caused problems
+  - examples folder script cleanup
 
 Changelog for smp_utils-0.97 [20120120] [svn:r116]
   - smp_conf_phy_event: new utility
